fix wallpaper & yt embed on mobile

--- a/style.css
+++ b/style.css
@@ -124,3 +124,17 @@ h1 img {
   padding: 2px;
   border-radius: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+	.desktop img {
+		width: 90%;
+	  }
+	  
+	  .mobile img {
+		width: 90%;
+	  }
+
+	iframe {
+		width: 90%;
+	}
+}
